# slam_robot_ws

./: .gitignore  README.md  setup.py
Cobot1/: README.md  setup.py
Cobot1/robot_tests/: dsr_runtime.py  go_home_test_node.py  motion_primitives.py  node_common.py  plant_pick_and_place_tray_node.py  plant_pick_and_place_tray_select_node.py  press_plate_pickup_node.py  press_plate_putdown_node.py  (+8 more)
depth_check/: package.xml  setup.cfg  setup.py
resource/: robot_tests
robot_tests/: README.md  __init__.py  compliance_common.py  go_home_test_node.py  integrated_emergency_stop_node.py  integrated_manual_control_node.py  integrated_plant_pick_and_place_node.py  integrated_tray_next_step_node.py  integrated_tray_soil_flatten_node.py  integrated_tray_soil_state_check_node.py  motion_primitives.py  node_common.py  package.xml  plant_pick_and_place_common.py  press_plate_pickup_node.py  press_plate_putdown_node.py  robot_motion_data.py  setup.cfg  setup.py  shovel_pickup_node.py  shovel_putdown_node.py  tray_soil_service_common.py  tray_soil_state_check_node.py
robot_tests/integrated/: README.md  WORKLOG.md  __init__.py  config.py  dashboard_app.py  dashboard_logic.py  main.py  ros_runner.py  smartfarm_dashboard.ui
robot_tests/launch/: integrated_dashboard.launch.py
robot_tests/standalone_tests/: README.md  __init__.py  a_tray_second_drop_debug_node.py  abcd_tray_soil_drop_test_node.py  keyboard_teleop_node.py  soil_supply_scoop_test_node.py  tray_rock_remove_node.py  tray_soil_add_node.py  tray_soil_flatten_node.py  tray_soil_remove_node.py  tray_top_move_node.py
(+9 files in other folders)
