<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_tests</name>
  <version>0.0.0</version>
  <description>Test nodes for Doosan M0609 and peripherals.</description>
  <maintainer email="murderer0107@gmail.com">spacewhale0107</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>dsr_common2</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>python3-pyqt5</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
